crates/sgf-core/tests/snapshots/ops_anomaly/star_4_5.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Add anomaly DISTAR_TIME_CAT to planet #584
inverse: RemoveAnomaly { body: 584 }

--- gamestate
+++ gamestate
@@ -110060,6 +110060,7 @@
 			planet_orbitals=
 			{
 			}
+			anomaly="DISTAR_TIME_CAT"
 			bombardment_damage=0
 			entity=0
 			deposits=
