crates/sgf-core/tests/snapshots/ops_anomaly/surveyed_4_4.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added anomaly asteroid_uninhabitable_category to planet #1, found by empire 0
inverse: RemoveAnomaly { body: 1 }

--- gamestate
+++ gamestate
@@ -93503,6 +93503,7 @@
 			planet_orbitals=
 			{
 			}
+			anomaly="asteroid_uninhabitable_category"
 			bombardment_damage=0
 			flags=
 			{
@@ -532012,6 +532013,10 @@
 					random_allowed=yes
 				}
 			}
+			anomalies=
+			{
+				1 
+			}
 		}
 		terra_incognita=
 		{
