crates/sgf-core/tests/snapshots/ops_anomaly/surveyed_4_5.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added anomaly asteroid_uninhabitable_category to planet #3, found by empire 0
inverse: RemoveAnomaly { body: 3 }

--- gamestate
+++ gamestate
@@ -80151,6 +80151,7 @@
 			planet_orbitals=
 			{
 			}
+			anomaly="asteroid_uninhabitable_category"
 			bombardment_damage=0
 			entity=1
 		}
@@ -413363,6 +413364,10 @@
 		}
 		events=
 		{
+			anomalies=
+			{
+				3 
+			}
 		}
 		terra_incognita=
 		{
