crates/sgf-core/tests/snapshots/ops_anomaly/unsurveyed_4_4.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added anomaly asteroid_uninhabitable_category to planet #749
inverse: RemoveAnomaly { body: 749 }

--- gamestate
+++ gamestate
@@ -130545,6 +130545,7 @@
 			planet_orbitals=
 			{
 			}
+			anomaly="asteroid_uninhabitable_category"
 			bombardment_damage=0
 			entity=2
 			surveyed_by=17
