crates/sgf-core/tests/snapshots/ops_anomaly/unsurveyed_4_5.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added anomaly asteroid_uninhabitable_category to planet #585
inverse: RemoveAnomaly { body: 585 }

--- gamestate
+++ gamestate
@@ -110113,6 +110113,7 @@
 			planet_orbitals=
 			{
 			}
+			anomaly="asteroid_uninhabitable_category"
 			bombardment_damage=0
 			entity=2
 		}
